--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,7 +29,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.2-SNAPSHOT</b><br/>
-    Build: <b>2017-10-23 ()</b>
+    Build: <b>2017-10-24 ()</b>
 </fieldset>
 
 <fieldset>
@@ -38,14 +38,17 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
     <h4 style="text-decoration: underline;">2017</h4>
 
     <h5 style="text-decoration: underline;">October</h5>
-     <p>23 October 2017: Addressed Redmine Bug#179 (Transformation Error messages). Increased timeout for specific action to 1 minute.
-         Used to be 20seconds and also added a fail handler to stop process gracefully. (hiding loader and showing a message in console)    
+
+    <p>24 October 2017: Added Redmine Task#375 (Same value for source relation and source node). This only happens if source_node is empty, 
+        to avoid accidental overwrites. Also added http://www.w3.org/2001/XMLSchema#dateTime to the Literal Generators list.</p>
+    <p>23 October 2017: Addressed Redmine Bug#179 (Transformation Error messages). Increased timeout for specific action to 1 minute.
+        Used to be 20seconds and also added a fail handler to stop process gracefully. (hiding loader and showing a message in console) </p>   
     <p>20 October 2017: Added Redmine Feature#180 (Automatically assign the Literal generator to all Literals). Fixed 
         the ":" issue we had with values such as :http://www.w3.org/2000/01/rdf-schema#Literal. Fixed Redmine Bug#173 
-        (1st link after domain has absolute instead of relative path)
+        (1st link after domain has absolute instead of relative path)</p>
     <p>13 October 2017: Fixed Redmine Bug#177 (I have loaded a sample source file and I have done a transform. I go to info tab,
         change source file and immediately go to transform. It has still the old file and I need to reload the screen.)
-        Also renewed 3MTidy jar to fix Redmina Bug#176 (Files contained in schemata_list.xml deleted)
+        Also renewed 3MTidy jar to fix Redmina Bug#176 (Files contained in schemata_list.xml deleted)</p>
     <p>05 October 2017: RDFVisualizer URL is now a parameter in web.xml. When calling RDFVisualizer only one tab is used.</p>
     <p>03 October 2017: Adding extra info in web.xml to make Windows/Linux setup simpler. Removing useless targetRecordsFolder param.</p>
 
