Added Redmine Task#372 (Update 3MEditor to use x3ml schema version 1.3 - and therefore x3ml Engine 1.8.2)
Added 2 new elements in if block (broader and exact_match) and an
attribute in x3ml to indicate 3MEditor version.

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,7 +29,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.2-SNAPSHOT</b><br/>
-    Build: <b>2017-10-24 ()</b>
+    Build: <b>2017-10-25 ()</b>
 </fieldset>
 
 <fieldset>
@@ -38,7 +38,8 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
     <h4 style="text-decoration: underline;">2017</h4>
 
     <h5 style="text-decoration: underline;">October</h5>
-
+    <p>25 October 2017: Added Redmine Task#372 (Update 3MEditor to use x3ml schema version 1.3 - and therefore x3ml Engine 1.8.2).
+    Added 2 new elements in if block (broader and exact_match) and an attribute in x3ml to indicate 3MEditor version.</p>
     <p>24 October 2017: Added Redmine Task#375 (Same value for source relation and source node). This only happens if source_node is empty, 
         to avoid accidental overwrites. Also added http://www.w3.org/2001/XMLSchema#dateTime to the Literal Generators list.</p>
     <p>23 October 2017: Addressed Redmine Bug#179 (Transformation Error messages). Increased timeout for specific action to 1 minute.
