Deleting multiple maps or links functional.
Deleting multiple maps or links functional! Added opacity change in all
POST requests (waiting user feedback). Also, disabling buttons on click
in all POST requests, to avoid multiple clicks
while waiting.

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -28,8 +28,8 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 -->
 <fieldset>
     <legend>3MEditor</legend>
-    Version: <b>3.2</b><br/>
-    Build: <b>2017-10-25 ()</b>
+    Version: <b>3.3-SNAPSHOT</b><br/>
+    Build: <b>2017-10-26 ()</b>
 </fieldset>
 
 <fieldset>
@@ -38,6 +38,8 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
     <h4 style="text-decoration: underline;">2017</h4>
 
     <h5 style="text-decoration: underline;">October</h5>
+    <p>26 October 2017: Deleting multiple maps or links functional! Added opacity change in all POST requests (waiting user feedback). Also, disabling buttons on click in all POST requests, to avoid multiple clicks
+    while waiting.</p>
     <p>25 October 2017: <b>Release 3.2</b>. Added Redmine Task#372 (Update 3MEditor to use x3ml schema version 1.3 - and therefore x3ml Engine 1.8.2).
     Added 2 new elements in if block (broader and exact_match) and an attribute in x3ml to indicate 3MEditor version.</p>
     <p>24 October 2017: Added Redmine Task#375 (Same value for source relation and source node). This only happens if source_node is empty, 
