Fixing issues related with broader-exact_match rules.
Fixing issues related with broader-exact_match rules. Fixed nasty
Redmine Bug#438
(the one with generator args not appearing). Started work on Copy
Map(s)-Link(s).

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,7 +29,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.3-SNAPSHOT</b><br/>
-    Build: <b>2017-10-26 ()</b>
+    Build: <b>2017-11-01 ()</b>
 </fieldset>
 
 <fieldset>
@@ -37,7 +37,12 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 
     <h4 style="text-decoration: underline;">2017</h4>
 
+      <h5 style="text-decoration: underline;">November</h5>
+      <p>01 November 2017: Fixing issues related with broader-exact_match rules. Fixed nasty Redmine Bug#438
+      (the one with generator args not appearing). Started work on Copy Map(s)-Link(s).</p>
+    
     <h5 style="text-decoration: underline;">October</h5>
+    
     <p>26 October 2017: Deleting multiple maps or links functional! Added opacity change in all POST requests (waiting user feedback). Also, disabling buttons on click in all POST requests, to avoid multiple clicks
     while waiting.</p>
     <p>25 October 2017: <b>Release 3.2</b>. Added Redmine Task#372 (Update 3MEditor to use x3ml schema version 1.3 - and therefore x3ml Engine 1.8.2).
