User may not select links and domains at the same time, to avoid invalid state (deleting domain with links).
User may not select links and domains at the same time, to avoid invalid
state (deleting domain with links). Made selection borders thicker (from
2px to 4px) to avoid issues with users (e.g. Maria) working 3MEditor
with zoom less than 100%.

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,7 +29,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.3-SNAPSHOT</b><br/>
-    Build: <b>2017-11-03 ()</b>
+    Build: <b>2017-11-06 ()</b>
 </fieldset>
 
 <fieldset>
@@ -38,6 +38,8 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
     <h4 style="text-decoration: underline;">2017</h4>
 
       <h5 style="text-decoration: underline;">November</h5>
+      <p>06 November 2017: User may not select links and domains at the same time, to avoid invalid state (deleting domain with links). Made selection borders thicker
+          (from 2px to 4px) to avoid issues with users (e.g. Maria) working 3MEditor with zoom less than 100%.
       <p>03 November 2017: Attempt to disable buttons while waiting for action to complete caused problems (it also disabled input fields, losing focus etc).
       So, changed it to button elements ONLY.</p>
       <p>01 November 2017: Fixing issues related with broader-exact_match rules. Fixed nasty Redmine Bug#438
