--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,7 +29,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.3-SNAPSHOT</b><br/>
-    Build: <b>2017-11-22 ()</b>
+    Build: <b>2017-11-24 ()</b>
 </fieldset>
 
 <fieldset>
@@ -38,6 +38,9 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
     <h4 style="text-decoration: underline;">2017</h4>
 
       <h5 style="text-decoration: underline;">November</h5>
+      <p>24 November 2017: Updated our code to work with https:// and also URLs ending with '/' (Redmine Bug#774 - 
+          Combo values issues with https:// or ending with /). Also improved error messages when Jena reasoner fails to 
+      produce results to fill in combo (Redmine Task#772 - Avoid meaningless error messages when something goes wrong).</p>
       <p>22 November 2017: Fixed ancient Redmine Bug#724 (Deleting a target intermediate causes visual issues (extra entity types))</p>
       <p>10 November 2017: Decided to remove disabling all buttons while posting to the server (created more problems than it actually solved).
       Added loading state for buttons adding stuff. Fixed title in domain context menu.</p>
