Fixed an issue we had when filling attribute input fields with '<' (It broke underlying XML). Updated Reasoner version.

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,15 +29,22 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.3-SNAPSHOT</b><br/>
-    Build: <b>2017-11-27 ()</b>
+    Build: <b>2018-01-09 ()</b>
 </fieldset>
 
 <fieldset>
     <legend>Changelog</legend>
 
+     <h4 style="text-decoration: underline;">2018</h4>
+
+    <h5 style="text-decoration: underline;">January</h5>
+    <p>09 January 2018: Updated Reasoner.</p>
+    
     <h4 style="text-decoration: underline;">2017</h4>
+    
 
     <h5 style="text-decoration: underline;">November</h5>
+    <p>28 November 2017: Fixed an issue we had when filling attribute input fields with '<' (It broke underlying XML).</p>
     <p>27 November 2017: Fixed Redmine Bug#778 (When adding new map, following maps index does not get updated as it should.)
     </p>
     <p>24 November 2017: Updated our code to work with https:// and also URLs ending with '/' (Redmine Bug#774 - 
