Fixed Redmine Bug#724 side-effect (Weird "double red font combo value")

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,19 +29,20 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.3-SNAPSHOT</b><br/>
-    Build: <b>2018-01-09 ()</b>
+    Build: <b>2018-01-10 ()</b>
 </fieldset>
 
 <fieldset>
     <legend>Changelog</legend>
 
-     <h4 style="text-decoration: underline;">2018</h4>
+    <h4 style="text-decoration: underline;">2018</h4>
 
     <h5 style="text-decoration: underline;">January</h5>
+    <p>10 January 2018: Fixed Redmine Bug#724 side-effect (Weird "double red font combo value")</p>
     <p>09 January 2018: Updated Reasoner.</p>
-    
+
     <h4 style="text-decoration: underline;">2017</h4>
-    
+
 
     <h5 style="text-decoration: underline;">November</h5>
     <p>28 November 2017: Fixed an issue we had when filling attribute input fields with '<' (It broke underlying XML).</p>
