Editor name added as parameter in web.xml to investigate issue with multiple instances over different servers

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,7 +29,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.3-SNAPSHOT</b><br/>
-    Build: <b>2018-01-25 ()</b>
+    Build: <b>2018-03-07 ()</b>
 </fieldset>
 
 <fieldset>
@@ -37,9 +37,11 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 
     <h4 style="text-decoration: underline;">2018</h4>
 
+     <h5 style="text-decoration: underline;">March</h5>
+     <p>07 March 2018: Editor name added as parameter in web.xml to investigate issue with multiple instances over different servers.</p>
+    
     <h5 style="text-decoration: underline;">January</h5>
-     <p>25 January 2018: Worked on Redmine Task#877 Weird message needs to be investigated. Jena reasoner was updated, so that
-         if an error occurs,it throws an exception with a meaningful message. 3MEditor shows this message and (hopefully) guides 
+     <p>25 January 2018: Worked on Redmine Task#877 Weird message needs to be investigated. Jena reasoner was updated, so that if an error occurs,it throws an exception with a meaningful message. 3MEditor shows this message and (hopefully) guides 
          user to fix things... (Will require further feedback)
     <p>10 January 2018: Fixed Redmine Bug#724 side-effect (Weird "double red font combo value")</p>
     <p>09 January 2018: Updated Reasoner.</p>
