Changed 'is same as' tooltip from fixed to dynamic (Redmine Feature#987)

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -38,7 +38,8 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
     <h4 style="text-decoration: underline;">2018</h4>
 
      <h5 style="text-decoration: underline;">March</h5>
-     <p>07 March 2018: Editor name added as parameter in web.xml to investigate issue with multiple instances over different servers.</p>
+     <p>07 March 2018: Editor name added as parameter in web.xml to investigate issue with multiple instances over different servers.
+     Changed 'is same as' tooltip from fixed to dynamic (Redmine Feature#987).</p>
     
     <h5 style="text-decoration: underline;">January</h5>
      <p>25 January 2018: Worked on Redmine Task#877 Weird message needs to be investigated. Jena reasoner was updated, so that if an error occurs,it throws an exception with a meaningful message. 3MEditor shows this message and (hopefully) guides 
