Extended copyright to include 2018.

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -1,5 +1,5 @@
 <!--
-Copyright 2014-2017 Institute of Computer Science,
+Copyright 2014-2018  Institute of Computer Science,
 Foundation for Research and Technology - Hellas
 
 Licensed under the EUPL, Version 1.1 or - as soon they will be approved
@@ -29,7 +29,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.3-SNAPSHOT</b><br/>
-    Build: <b>2018-03-07 ()</b>
+    Build: <b>2018-03-07 (a271739222eb454d9eb85526697aa5588eff4cfd)</b>
 </fieldset>
 
 <fieldset>
@@ -39,7 +39,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 
      <h5 style="text-decoration: underline;">March</h5>
      <p>07 March 2018: Editor name added as parameter in web.xml to investigate issue with multiple instances over different servers.
-     Changed 'is same as' tooltip from fixed to dynamic (Redmine Feature#987).</p>
+     Changed 'is same as' tooltip from fixed to dynamic (Redmine Feature#987). Extended copyright to include 2018.</p>
     
     <h5 style="text-decoration: underline;">January</h5>
      <p>25 January 2018: Worked on Redmine Task#877 Weird message needs to be investigated. Jena reasoner was updated, so that if an error occurs,it throws an exception with a meaningful message. 3MEditor shows this message and (hopefully) guides 
