--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,13 +29,17 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.3-SNAPSHOT</b><br/>
-    Build: <b>2018-03-22 ()</b>
+    Build: <b>2018-04-24 ()</b>
 </fieldset>
 
 <fieldset>
     <legend>Changelog</legend>
 
     <h4 style="text-decoration: underline;">2018</h4>
+
+    <h5 style="text-decoration: underline;">April</h5>
+    <p>24 April 2018: Adding support for nt target schemas.</p>
+
 
     <h5 style="text-decoration: underline;">March</h5>
     <p>22 March 2018: Updated x3mlEngine from 1.8.2 to 1.8.4</p>
