--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -38,7 +38,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
     <h4 style="text-decoration: underline;">2018</h4>
 
     <h5 style="text-decoration: underline;">April</h5>
-    <p>30 April 2018: Updated x3ml engine to version 1.8.5.</p>
+    <p>30 April 2018: Updated x3ml engine to version 1.8.5-1. Updated x3ml engine to version 1.8.5.</p>
     <p>27 April 2018: Updated isl.Reasoner version.</p>
     <p>24 April 2018: Adding support for nt target schemas.</p>
 
