--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,7 +29,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.3-SNAPSHOT</b><br/>
-    Build: <b>2018-04-30 ()</b>
+    Build: <b>2018-05-02 ()</b>
 </fieldset>
 
 <fieldset>
@@ -37,6 +37,9 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 
     <h4 style="text-decoration: underline;">2018</h4>
 
+     <h5 style="text-decoration: underline;">May</h5>
+    <p>02 May 2018: Updated isl.Reasoner version once more to fix an issue with nt files.</p>
+    
     <h5 style="text-decoration: underline;">April</h5>
     <p>30 April 2018: Updated x3ml engine to version 1.8.5-1. Updated x3ml engine to version 1.8.5.</p>
     <p>27 April 2018: Updated isl.Reasoner version.</p>
