--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -38,7 +38,8 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
     <h4 style="text-decoration: underline;">2018</h4>
 
      <h5 style="text-decoration: underline;">May</h5>
-    <p>02 May 2018: Updated isl.Reasoner version once more to fix an issue with nt files.</p>
+    <p>02 May 2018: Updated isl.Reasoner version once more to fix an issue with nt files. Fixed Redmine Bug#1050 (Cannot update constant value inside additional)
+        by checking if constant exists and if not add it before updating value.</p>
     
     <h5 style="text-decoration: underline;">April</h5>
     <p>30 April 2018: Updated x3ml engine to version 1.8.5-1. Updated x3ml engine to version 1.8.5.</p>
