Thesaurus-related fixes.

--- a/src/main/webapp/x3mlEngine.html
+++ b/src/main/webapp/x3mlEngine.html
@@ -132,7 +132,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
                             <button title="Click button to visualize saved target record file" style="margin-top:18px;" id="visualizeTarget" type="button" class="btn btn-default btn-sm">Visualize selected subject</button>
                         </div>
                     </div>
-                    <div class="col-sm-6 hidden">
+                    <div class="col-sm-6">
                         <label class="control-label" >Thesaurus</label>     
                         <textarea id="thesaurus"  placeholder="Fill in value" class="form-control input-sm" rows="20"/>
                     </div>
