--- a/src/main/webapp/x3mlEngine.html
+++ b/src/main/webapp/x3mlEngine.html
@@ -109,7 +109,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 
                     <div class="row">
                         <div class="col-sm-6">
-                            <label class="control-label" >Target Record RDF File (Using x3ml engine version ? and schema version 1.4)</label>     
+                            <label class="control-label" >Target Record RDF File (Using x3ml engine version 1.9.0-SNAPSHOT and schema version 1.4)</label>     
                             <img class="loader" src="js/select2-3.5.1/select2-spinner.gif" style="display:none;"/>
                             <textarea id="engineResult" style="width:100%;" rows="20">
                             </textarea>
@@ -132,7 +132,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
                             <button title="Click button to visualize saved target record file" style="margin-top:18px;" id="visualizeTarget" type="button" class="btn btn-default btn-sm">Visualize selected subject</button>
                         </div>
                     </div>
-                    <div class="col-sm-6">
+                    <div class="col-sm-6 hidden">
                         <label class="control-label" >Thesaurus</label>     
                         <textarea id="thesaurus"  placeholder="Fill in value" class="form-control input-sm" rows="20"/>
                     </div>
