--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -28,8 +28,8 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 -->
 <fieldset>
     <legend>3MEditor</legend>
-    Version: <b>3.3</b><br/>
-    Build: <b>2018-05-30 ()</b>
+    Version: <b>3.4-SNAPSHOT</b><br/>
+    Build: <b>2018-06-04 ()</b>
 </fieldset>
 
 <fieldset>
@@ -37,9 +37,12 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 
     <h4 style="text-decoration: underline;">2018</h4>
 
+    <h5 style="text-decoration: underline;">June</h5>
+    <p>04 June 2018: Started work on 3.4-SNAPSHOT. Added a message to prompt user to download x3ml engine version 1.9.0</p>
+
     <h5 style="text-decoration: underline;">May</h5>
-    <p>30 May 2018:<b>Release 3.3</b>. Updated x3ml engine to 1.9.0-SNAPSHOT to support thesaurus on transformation. Thesaurus may now also be nt or rdf.
-    Fixed Redmine Bug#1188</p>
+    <p>30 May 2018: <b>Release 3.3</b>. Updated x3ml engine to 1.9.0-SNAPSHOT to support thesaurus on transformation. Thesaurus may now also be nt or rdf.
+        Fixed Redmine Bug#1188</p>
     <p>29 May 2018: Release 3.3 almost ready. Editor updated to work with x3ml schema version 1.4. It now supports thesaurus uploading and usage by x3ml 
         engine when transforming.</p>
     <p>02 May 2018: Updated isl.Reasoner version once more to fix an issue with nt files. Fixed Redmine Bug#1050 (Cannot update constant value inside additional)
