--- a/src/main/webapp/x3mlEngine.html
+++ b/src/main/webapp/x3mlEngine.html
@@ -109,7 +109,9 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 
                     <div class="row">
                         <div class="col-sm-6">
-                            <label class="control-label" >Target Record RDF File (Using x3ml engine version 1.9.0-SNAPSHOT and schema version 1.4)</label>     
+                            <label class="control-label" >Target Record RDF File (Using x3ml engine version 1.9.0 and schema version 1.4)
+                                <br/> <span style="color:red">ATTENTION: Mapping files are compatible with x3ml engine version 1.9.0 or newer ONLY!
+                                    Download <a target="_blank" href="https://github.com/isl/x3ml/releases/tag/1.9.0">HERE</a>.</span></label>     
                             <img class="loader" src="js/select2-3.5.1/select2-spinner.gif" style="display:none;"/>
                             <textarea id="engineResult" style="width:100%;" rows="20">
                             </textarea>
