--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,7 +29,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.4-SNAPSHOT</b><br/>
-    Build: <b>2018-06-04 ()</b>
+    Build: <b>2018-06-14 ()</b>
 </fieldset>
 
 <fieldset>
@@ -38,6 +38,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
     <h4 style="text-decoration: underline;">2018</h4>
 
     <h5 style="text-decoration: underline;">June</h5>
+    <p>14 June 2018: Updated x3ml engine to 1.9.1-SNAPSHOT to improve error messages.</p>
     <p>04 June 2018: Started work on 3.4-SNAPSHOT. Added a message to prompt user to download x3ml engine version 1.9.0</p>
 
     <h5 style="text-decoration: underline;">May</h5>
