--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,7 +29,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.4-SNAPSHOT</b><br/>
-    Build: <b>2018-06-20 ()</b>
+    Build: <b>2018-07-09 ()</b>
 </fieldset>
 
 <fieldset>
@@ -37,6 +37,9 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 
     <h4 style="text-decoration: underline;">2018</h4>
 
+    <h5 style="text-decoration: underline;">July</h5>
+    <p>09 July 2018: Fixed 'Delete variable' bug.</p>
+    
     <h5 style="text-decoration: underline;">June</h5>
     <p>20 June 2018: Is same as (map) is now a drop-down (User may select an existing value or add new)</p>
     <p>14 June 2018: Updated x3ml engine to 1.9.1-SNAPSHOT to improve error messages.</p>
