--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,7 +29,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.4-SNAPSHOT</b><br/>
-    Build: <b>2018-07-26 ()</b>
+    Build: <b>2018-10-23 ()</b>
 </fieldset>
 
 <fieldset>
@@ -37,6 +37,9 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 
     <h4 style="text-decoration: underline;">2018</h4>
 
+    <h5 style="text-decoration: underline;">October</h5>
+    <p>23 October 2018: Fixed a bug concerning visualizer and encoded russian URLs. Fixed "cannot delete some variables" bug.</p>
+    
     <h5 style="text-decoration: underline;">July</h5>
     <p>26 July 2018: Updated x3ml version message in Transformation tab.</p>
     <p>09 July 2018: Fixed 'Delete variable' bug.</p>
