Added a new built-in generator (URIorUUID) and extended copyright to 2019

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -1,5 +1,5 @@
 <!--
-Copyright 2014-2018  Institute of Computer Science,
+Copyright 2014-2019  Institute of Computer Science,
 Foundation for Research and Technology - Hellas
 
 Licensed under the EUPL, Version 1.1 or - as soon they will be approved
@@ -29,12 +29,17 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.4-SNAPSHOT</b><br/>
-    Build: <b>2018-10-23 ()</b>
+    Build: <b>2019-04-08 ()</b>
 </fieldset>
 
 <fieldset>
     <legend>Changelog</legend>
 
+    <h4 style="text-decoration: underline;">2019</h4>
+
+    <h5 style="text-decoration: underline;">April</h5>
+    <p>08 April 2019: Added "URIorUUID" generator to our built-in set as requested by users. Extended copyright to 2019.</p>
+    
     <h4 style="text-decoration: underline;">2018</h4>
 
     <h5 style="text-decoration: underline;">October</h5>
