Improving Target Templates functionality after George's remarks.

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,7 +29,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.4-SNAPSHOT</b><br/>
-    Build: <b>2019-04-09 ()</b>
+    Build: <b>2019-04-10 ()</b>
 </fieldset>
 
 <fieldset>
@@ -38,6 +38,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
     <h4 style="text-decoration: underline;">2019</h4>
 
     <h5 style="text-decoration: underline;">April</h5>
+    <p>10 April 2019: Improving Target Templates functionality after George's remarks.</p>
     <p>09 April 2019: Added Target Templates functionality (Schema was also updated to version 1.5).</p>
     <p>08 April 2019: Added "URIorUUID" generator to our built-in set as requested by users. Extended copyright to 2019.</p>
     
