Various improvements concerning Target Templates and Transformation Tab
Target column is not reinitialized when deleting a template. Updated x3ml engine to 1.9.2-SNAPSHOT to support target templates. Transformation tab improvements: Linkify.js is only used when it's meaningful (subjects links and Turtle). Text selection works also for Firefox now (had a bug). Added some convenience amenities in Transformation tab: Subject field is now auto-filled when user selects text. Namespaces are taken into account to create full URIs if hashed. Linkify.js is used to provide a target representation inside a div with actual links for URIs.

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,13 +29,20 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.4-SNAPSHOT</b><br/>
-    Build: <b>2019-04-12 ()</b>
+    Build: <b>2019-05-23 ()</b>
 </fieldset>
 
 <fieldset>
     <legend>Changelog</legend>
 
     <h4 style="text-decoration: underline;">2019</h4>
+
+    <h5 style="text-decoration: underline;">May</h5>
+    <p>23 May 2019: Target column is not reinitialized when deleting a template. Updated x3ml engine to 1.9.2-SNAPSHOT to support target templates. 
+        Transformation tab improvements: Linkify.js is only used when it's meaningful (subjects links and Turtle).
+        Text selection works also for Firefox now (had a bug).</p>
+    <p>21 May 2019: Added some convenience amenities in Transformation tab: Subject field is now auto-filled when user selects text. Namespaces are
+        taken into account to create full URIs if hashed. Linkify.js is used to provide a target representation inside a div with actual links for URIs.</p>
 
     <h5 style="text-decoration: underline;">April</h5>
     <p>12 April 2019: Fixed a column misalignment issue</p>
