Added HTML5 DOCTYPE. Added code to detect reverse proxy https and adapt. Fixed Maria's weird template position-dependent bug.

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,13 +29,15 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.4-SNAPSHOT</b><br/>
-    Build: <b>2019-05-23 ()</b>
+    Build: <b>2019-06-27 ()</b>
 </fieldset>
 
 <fieldset>
     <legend>Changelog</legend>
 
     <h4 style="text-decoration: underline;">2019</h4>
+    <h5 style="text-decoration: underline;">June</h5>
+    <p>27 June 2019: Added HTML5 DOCTYPE. Added code to detect reverse proxy https and adapt. Fixed Maria's weird template position-dependent bug.</p>
 
     <h5 style="text-decoration: underline;">May</h5>
     <p>23 May 2019: Target column is not reinitialized when deleting a template. Updated x3ml engine to 1.9.2-SNAPSHOT to support target templates. 
