Added GDPR links and footer logos.
Got code from 3M

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,7 +29,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.4-SNAPSHOT</b><br/>
-    Build: <b>2019-07-12 ()</b>
+    Build: <b>2019-07-15 ()</b>
 </fieldset>
 
 <fieldset>
@@ -37,8 +37,9 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 
     <h4 style="text-decoration: underline;">2019</h4>
     <h5 style="text-decoration: underline;">July</h5>
+    <p>15 July 2019: Added GDPR links and footer logos.</p>
     <p>12 July 2019: Added code to prevent infinite loop when finding superclasses using eXist reasoner (will have to test if there are any side-effects).</p>
-    
+
     <h5 style="text-decoration: underline;">June</h5>
     <p>27 June 2019: Added HTML5 DOCTYPE. Added code to detect reverse proxy https and adapt. Fixed Maria's weird template position-dependent bug.</p>
 
